--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,5 +1,5 @@
 /**
-  Author: Callum-James Smith (Sudo-Make)
+  Author: Callum-James Smith (SilenceOfTheLambdas)
   Date Created: 21-02-2020
   Last Updated: 17-07-2020
 */
